# comp_ev_group_F

./: GA_Teste.py  README.md  pyproject.toml
notebooks/TP1/: G_A_OT_ENG_ELETRICA.py  G_A_OT_ENG_ELETRICA_PLOT.py  evolucao.txt  queen_problem_.ipynb  restringin_problem.ipynb
notebooks/TP2/: tsp.ipynb
src/TP/: run.py
src/TP/core/: GA_interface.py  fitness.py  interface.py  state.py
src/TP/core/individuals/: encoding.py  factory.py  population.py  representation.py
src/TP/core/logging/: observer.py  progress.py
src/TP/core/selection/parents/: operators.py
src/TP/core/selection/survivors/: operators.py
src/TP/core/utils/: initialization.py
src/TP/core/variation/: mutation.py  recombination.py
src/TP/problems/evolutionary/individuals/: population.py
src/TP/problems/queens/: fitness.py  interface.py
src/TP/problems/queens/individuals/: factory.py  population.py  representation.py
src/TP/problems/queens/utils/: initialization.py
src/TP/problems/queens/variation/: mutation.py
src/TP/problems/tsp/: fitness.py  interface.py
src/TP/problems/tsp/individuals/: encoding.py  representation.py
src/TP/problems/tsp/utils/: initialization.py
src/TP/problems/tsp/variation/: mutation.py  recombination.py
src/TP/queen_problem/evolutionary/: fitness.py
src/TP/queen_problem/evolutionary/individuals/: factory.py  population.py  representation.py
src/TP/queen_problem/evolutionary/selection/parents/: operators.py
src/TP/queen_problem/evolutionary/variation/: mutation.py  recombination.py
src/TP/queen_problem/utils/: population.py  representation.py
(+1 files in other folders)
