[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TP"
requires-python = ">=3.13,<3.14"
version = "0.1.0"
dependencies = [
    "pydantic==2.*",
    "pandas[excel]==2.*",
    "setuptools==80.8.*",
    "numpy==2.2.*",
    "plotly==6.2.*",
    "nbformat==5.9.*",
    "seaborn==0.13.2",
    "pytest==8.*",
    "pytest-cov",
    "ruff",
    "ipykernel",
    "pylint==3.3.*",
    "pandas-stubs",
    "mypy"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle - code style errors
    "F",   # pyflakes - code quality
    "I",   # isort - import order
    "W",   # pycodestyle - code style warnings
    "PL",  # pylint - code quality
    "PT",  # flake8-pytest-style - code style for pytest
    "C",   # Verifica a complexidade de código (inclui C901)
    "B",   # flake8-bugbear - verifica code smells
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["TID251", "PLC2701"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true